force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Contract_Settlement_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contract_Settlement_Amount__c</fullName>
    <description>Số tiền tất toán hợp đồng</description>
    <label>Contract Settlement Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>