force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Contract_Type_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contract_Type_2__c</fullName>
    <description>Loại hợp đồng / xử lý (2). Giá trị đồng bộ với Contract Type 1.</description>
    <label>Contract Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thanh lý đặc biệt</fullName>
            </value>
            <value>
                <fullName>Bán nợ</fullName>
            </value>
            <value>
                <fullName>Bán nợ một phần</fullName>
            </value>
            <value>
                <fullName>Khác (charge-off, field, late call…)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>