force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>FEC_Conversion_Rate__c</fullName>
    <description>Lãi xuất chuyển đổi</description>
    <label>Conversion Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0.00%</fullName>
            </value>
            <value>
                <fullName>12.00%</fullName>
            </value>
            <value>
                <fullName>28.00%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>