force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Correct_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Correct_Contract_Number__c</fullName>
    <description>Số HĐ đúng</description>
    <label>Correct Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>