force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Correct_Customer_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Correct_Customer_Full_Name__c</fullName>
    <description>Họ tên KH đúng</description>
    <label>Correct Customer Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>