force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Correct_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>FEC_Correct_Date_of_Birth__c</fullName>
    <description>Ngày sinh đúng</description>
    <label>Correct Date of Birth</label>
    <type>Date</type>
</CustomField>