force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_CS_Complaint_Issue_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_CS_Complaint_Issue_2__c</fullName>
    <description>Vấn đề khiếu nại CS (2)</description>
    <label>CS Complaint Issue 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tổng khoản vay</fullName>
            </value>
            <value>
                <fullName>Lãi suất</fullName>
            </value>
            <value>
                <fullName>Lịch thanh toán</fullName>
            </value>
            <value>
                <fullName>Nợ quá hạn</fullName>
            </value>
            <value>
                <fullName>Thanh lý HĐ</fullName>
            </value>
            <value>
                <fullName>Các loại phí, lãi phát sinh</fullName>
            </value>
            <value>
                <fullName>Chương trình miễn giảm tiền</fullName>
            </value>
            <value>
                <fullName>Bảo hiểm khoản vay</fullName>
            </value>
            <value>
                <fullName>Chương trình khuyến mãi</fullName>
            </value>
            <value>
                <fullName>Thủ tục giấy tờ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>