force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Current_Outstanding_Principal__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Outstanding_Principal__c</fullName>
    <description>Dư nợ gốc hiện tại</description>
    <label>Current Outstanding Principal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>