force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Current_Settlement_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Settlement_Amount__c</fullName>
    <description>Số tiền tất toán hiện tại</description>
    <label>Current Settlement Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>