force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Customer_Issue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Issue__c</fullName>
    <description>Vấn đề của KH</description>
    <label>Customer Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Partner Cannot Find Information</fullName>
            </value>
            <value>
                <fullName>Verify Disbursement Information</fullName>
            </value>
            <value>
                <fullName>Request Disbursement Documents</fullName>
            </value>
            <value>
                <fullName>Security Code / Disbursement Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>