force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Name__c</fullName>
    <description>Tên khách hàng</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>