force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Customer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Phone_Number__c</fullName>
    <description>SĐT khách hàng</description>
    <label>Customer Phone Number</label>
    <type>Phone</type>
</CustomField>