force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Customer_Provided_Info__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Provided_Info__c</fullName>
    <label>Customer Provided Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>