force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Customer_Request_1__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Request_1__c</fullName>
    <label>Customer Request 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installment Amount</fullName>
            </value>
            <value>
                <fullName>Overdue Amount</fullName>
            </value>
            <value>
                <fullName>Contract Settlement Amount</fullName>
            </value>
            <value>
                <fullName>Other (Specify Details)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>