force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Customer_Request__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Request__c</fullName>
    <description>Yêu cầu của khách hàng</description>
    <label>Customer Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>