force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Customer_Request_Details__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Request_Details__c</fullName>
    <description>Nội dung KH yêu cầu 2</description>
    <label>Customer Request Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card Outstanding Balance</fullName>
            </value>
            <value>
                <fullName>Request Card Cancellation</fullName>
            </value>
            <value>
                <fullName>Other (Specify Details)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>