force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Customer_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Request_Reason__c</fullName>
    <description>Lý do KH yêu cầu</description>
    <label>Customer Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affected by Storms or Floods</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Medical Condition</fullName>
            </value>
            <value>
                <fullName>Other (Specify Details)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>