force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Customer_Service_Staff_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Service_Staff_Type__c</fullName>
    <description>Loại nhân viên dịch vụ khách hàng tiếp nhận</description>
    <label>Customer Service Staff Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NV DVKH qua điện thoại</fullName>
            </value>
            <value>
                <fullName>NV DVKH qua email/ chat</fullName>
            </value>
            <value>
                <fullName>NV DVKH tại văn phòng</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>