force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Data_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>FEC_Data_Sync_Error__c</fullName>
    <description>Lỗi đồng bộ dữ liệu</description>
    <label>Data Sync Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Không đồng bộ CCCD qua NFC</fullName>
            </value>
            <value>
                <fullName>Không xác thực qua NFC</fullName>
            </value>
            <value>
                <fullName>Không đồng bộ được thông tin mới</fullName>
            </value>
            <value>
                <fullName>Không thể cập nhật thông tin mới</fullName>
            </value>
            <value>
                <fullName>Khác</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>