force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Debt_Collection_Phone__c.field-meta.xml
<CustomField>
    <fullName>FEC_Debt_Collection_Phone__c</fullName>
    <description>Số điện thoại thu hồi nợ</description>
    <label>Debt Collection Phone</label>
    <type>Phone</type>
</CustomField>