force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Delivery_Method_1__c.field-meta.xml
<CustomField>
    <fullName>FEC_Delivery_Method_1__c</fullName>
    <description>Hình thức gửi tài liệu (1)</description>
    <label>Delivery Method 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Địa chỉ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>