force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Delivery_Method_3__c.field-meta.xml
<CustomField>
    <fullName>FEC_Delivery_Method_3__c</fullName>
    <description>Hình thức giao phát 3</description>
    <label>Delivery Method 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Postal Address</fullName>
            </value>
            <value>
                <fullName>Email (Debt Sale Confirmation Only)</fullName>
            </value>
            <value>
                <fullName>Office Pickup (Debt Sale Confirmation Only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>