force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Delivery_Msg_Received__c.field-meta.xml
<CustomField>
    <fullName>FEC_Delivery_Msg_Received__c</fullName>
    <description>KH có nhận tin nhắn giao phát</description>
    <label>Delivery Msg Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Not Received</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Call Disconnected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>