force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Device_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Device_Change_Reason__c</fullName>
    <description>Lý do thay đổi thiết bị</description>
    <label>Device Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>