force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Device_Owner__c.field-meta.xml
<CustomField>
    <fullName>FEC_Device_Owner__c</fullName>
    <description>Chủ sở hữu thiết bị</description>
    <label>Device Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>