force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Device_Since__c.field-meta.xml
<CustomField>
    <fullName>FEC_Device_Since__c</fullName>
    <description>Sử dụng thiết bị từ / mô tả thời điểm</description>
    <label>Device Since</label>
    <length>255</length>
    <type>Text</type>
</CustomField>