force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Disbursement_Account__c.field-meta.xml
<CustomField>
    <fullName>FEC_Disbursement_Account__c</fullName>
    <description>Tài khoản giải ngân</description>
    <label>Disbursement Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>