force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Disbursement_Received__c.field-meta.xml
<CustomField>
    <fullName>FEC_Disbursement_Received__c</fullName>
    <description>Đã nhận giải ngân</description>
    <label>Disbursement Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>