force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Dispute_Address__c.field-meta.xml
<CustomField>
    <fullName>FEC_Dispute_Address__c</fullName>
    <description>Địa chỉ liên quan tranh chấp</description>
    <label>Dispute Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>