force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Dispute_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Dispute_Amount__c</fullName>
    <description>Số tiền tranh chấp</description>
    <label>Dispute Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>