force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Dissatisfaction_Reason_1__c.field-meta.xml
<CustomField>
    <fullName>FEC_Dissatisfaction_Reason_1__c</fullName>
    <description>Lý do KH không hài lòng 1</description>
    <label>Dissatisfaction Reason 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Interest/Fees</fullName>
            </value>
            <value>
                <fullName>Unclear Outstanding Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>