force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Dissatisfaction_Reason_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Dissatisfaction_Reason_2__c</fullName>
    <description>Lý do KH không hài lòng 2</description>
    <label>Dissatisfaction Reason 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Need to Use Card</fullName>
            </value>
            <value>
                <fullName>No Longer Need Card</fullName>
            </value>
            <value>
                <fullName>Too Many Loan Offers</fullName>
            </value>
            <value>
                <fullName>Debt Reminder to Relative</fullName>
            </value>
            <value>
                <fullName>Too Many Debt Reminders</fullName>
            </value>
            <value>
                <fullName>Staff Consultation</fullName>
            </value>
            <value>
                <fullName>Staff Attitude (THN)</fullName>
            </value>
            <value>
                <fullName>No Chance for Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>