force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_DNB_Recorded__c.field-meta.xml
<CustomField>
    <fullName>FEC_DNB_Recorded__c</fullName>
    <description>Lịch sử ghi nhận DNB</description>
    <label>DNB Recorded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Đã từng ghi nhận DNB</fullName>
            </value>
            <value>
                <fullName>Chưa từng từng ghi nhận DNB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>