force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Document_Send_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Document_Send_Time__c</fullName>
    <description>Thời gian gửi chứng từ</description>
    <label>Document Send Time</label>
    <type>Date</type>
</CustomField>