force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Document_Type_1__c.field-meta.xml
<CustomField>
    <fullName>FEC_Document_Type_1__c</fullName>
    <description>Loại tài liệu (1)</description>
    <label>Document Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lịch thanh toán</fullName>
            </value>
            <value>
                <fullName>Lịch sử thanh toán</fullName>
            </value>
            <value>
                <fullName>Xác nhận thanh lý</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>