force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Document_Type_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Document_Type_2__c</fullName>
    <description>Loại tài liệu (2)</description>
    <label>Document Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRC</fullName>
            </value>
            <value>
                <fullName>Giấy giải chấp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>