force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Document_Type_3__c.field-meta.xml
<CustomField>
    <fullName>FEC_Document_Type_3__c</fullName>
    <description>Loại giấy tờ 3</description>
    <label>Document Type 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debt Sale Confirmation</fullName>
            </value>
            <value>
                <fullName>Contract Settlement Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>