force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Document_Type__c</fullName>
    <label>Document_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Có mộc</fullName>
            </value>
            <value>
                <fullName>Không mộc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>