force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Due_Date__c</fullName>
    <description>Ngày đến hạn</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>