force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Dunning_Contract_No__c.field-meta.xml
<CustomField>
    <fullName>FEC_Dunning_Contract_No__c</fullName>
    <description>Số hợp đồng liên quan nhắc nợ</description>
    <label>Dunning Contract No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>