force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Dunning_Method__c.field-meta.xml
<CustomField>
    <fullName>FEC_Dunning_Method__c</fullName>
    <description>Hình thức nhắc nợ</description>
    <label>Dunning Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nhân viên</fullName>
            </value>
            <value>
                <fullName>Hệ thống tự động</fullName>
            </value>
            <value>
                <fullName>SMS/ Zalo/ Facebook/ Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>