force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Dunning_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Dunning_Name__c</fullName>
    <description>Tên nhắc nợ / đối tượng dunning</description>
    <label>Dunning Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>