force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Email__c.field-meta.xml
<CustomField>
    <fullName>FEC_Email__c</fullName>
    <description>Email liên hệ / gửi tài liệu</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>