force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Email_Reply_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Email_Reply_Time__c</fullName>
    <description>Thời điểm phản hồi email</description>
    <label>Email Reply Time</label>
    <type>DateTime</type>
</CustomField>