force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Email_Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Email_Sent_Time__c</fullName>
    <description>Thời điểm gửi email</description>
    <label>Email Sent Time</label>
    <type>DateTime</type>
</CustomField>