force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>FEC_Email_Subject__c</fullName>
    <description>Tiêu đề email</description>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>