force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Entry_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Entry_Number__c</fullName>
    <description>Số bút toán / entry</description>
    <label>Entry Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>