force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Error_Category_Level_3__c.field-meta.xml
<CustomField>
    <fullName>FEC_Error_Category_Level_3__c</fullName>
    <description>Phân loại lỗi 3</description>
    <label>Error Category Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Registration Error</fullName>
            </value>
            <value>
                <fullName>Login Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>