force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Error_Category_Level_4__c.field-meta.xml
<CustomField>
    <fullName>FEC_Error_Category_Level_4__c</fullName>
    <description>Phân loại lỗi 4</description>
    <label>Error Category Level 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ID Card Not Synchronized</fullName>
            </value>
            <value>
                <fullName>Phone Number Not Synchronized</fullName>
            </value>
            <value>
                <fullName>Email Not Synchronized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>