force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Error_Category_Level_5__c.field-meta.xml
<CustomField>
    <fullName>FEC_Error_Category_Level_5__c</fullName>
    <description>Phân loại lỗi 5</description>
    <label>Error Category Level 5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan/Card Not Displayed or Intermittently Displayed</fullName>
            </value>
            <value>
                <fullName>Information Lookup Error</fullName>
            </value>
            <value>
                <fullName>OTP Not Received</fullName>
            </value>
            <value>
                <fullName>Loan/Card Application Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>