force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Error_Classification_1__c.field-meta.xml
<CustomField>
    <fullName>FEC_Error_Classification_1__c</fullName>
    <description>Phân loại lỗi (1)</description>
    <label>Error Classification 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lỗi không đóng được HĐ</fullName>
            </value>
            <value>
                <fullName>Lỗi pair tiền góp</fullName>
            </value>
            <value>
                <fullName>Lỗi hệ thống Finacle</fullName>
            </value>
            <value>
                <fullName>Lỗi khác</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>