force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Error_Details__c.field-meta.xml
<CustomField>
    <fullName>FEC_Error_Details__c</fullName>
    <description>Chi tiết lỗi</description>
    <label>Error Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>