force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Error_Type_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Error_Type_2__c</fullName>
    <description>Loại lỗi (2)</description>
    <label>Error Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kích hoạt thẻ</fullName>
            </value>
            <value>
                <fullName>Không đăng ký thẻ mới do thẻ cũ khóa 8/9</fullName>
            </value>
            <value>
                <fullName>Khác (ghi chú chi tiết)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>