force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_FEC_Loan__c.field-meta.xml
<CustomField>
    <fullName>FEC_FEC_Loan__c</fullName>
    <description>Khoản vay FE (theo khảo sát)</description>
    <label>FEC Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Có</fullName>
            </value>
            <value>
                <fullName>Không</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>