force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Fee_Collection_Staff__c.field-meta.xml
<CustomField>
    <fullName>FEC_Fee_Collection_Staff__c</fullName>
    <description>Nhân viên thu phí</description>
    <label>Fee Collection Staff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NV làm hồ sơ</fullName>
            </value>
            <value>
                <fullName>NV khác</fullName>
            </value>
            <value>
                <fullName>Không cung cấp/ không nhớ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>