force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Fee_Collector_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Fee_Collector_Name__c</fullName>
    <description>Tên người thu phí</description>
    <label>Fee Collector Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>